# oaa-validator

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
LICENSES/: MIT.txt
assets/: README.md
examples/: README.md
examples/full/: .oacollection  README.md  SOURCE.md  mimetype
examples/full/artworks/OAA-00044/: .oaartwork
examples/full/galleries/AP/: .oagallery
examples/full/galleries/For Sale/: .oagallery
examples/loc-multi-image/: .oacollection  README.md  SOURCE.md
examples/loc-multi-image/artworks/OAA-00002/: .oaartwork
examples/loc-multi-image/galleries/Library of Congress/: .oagallery
examples/minimal/: .oacollection  README.md
examples/minimal/artworks/OAA-00001/: .oaartwork
examples/minimal/galleries/Example Gallery/: .oagallery
examples/public-domain-synthetic/: .oacollection  README.md  SOURCE.md
requirements/: README.md  dev-requirements.txt  generate_traceability.py  oaa-0.1.yaml  traceability.md
schema/: README.md  oaa-manifest.schema.json
tests/: README.md
tests/validator/: __init__.py  test_traceability.py  test_validator.py
validator/: README.md  oaa_validate.py
validator/fixtures/invalid/: cases.json
validator/fixtures/valid/: examples.json
validator/oaa_validator/: __init__.py  cli.py  model.py  source.py  validator.py
validator/oaa_validator/rules/: __init__.py  artwork.py  collection.py  extensions.py  external_links.py  files.py  gallery.py  manifests.py  package.py  paths.py  security.py
(+5 files in other folders)
